2009-01-12  Ryan Lortie  <desrt@desrt.ca>

	* daemon/trashlib/trashitem.c: don't insta-thaw deletes
	* daemon/gvfsbackendtrash.c: use a timeout to only call thaw() once
	per batch of delete method calls.

2009-01-12  Matthias Clasen  <mclasen@redhat.com>

        * daemon/Makefile.am: Dist the dav+sd.mount.in file

2009-01-07  Tomas Bzatek  <tbzatek@redhat.com>

	* daemon/gvfsbackendnetwork.c: (recompute_files):
	Remove unnecessary GError

2009-01-06  Tomas Bzatek  <tbzatek@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 1.1.3 ===

2009-01-06  Tomas Bzatek  <tbzatek@redhat.com>

	* NEWS:
	Update for release

2009-01-06  Tomas Bzatek  <tbzatek@redhat.com>

	* daemon/gvfsbackendnetwork.c:
	* daemon/gvfsbackendsmbbrowse.c:
	* daemon/smb-browse.mount.in:
	SMB browsing authentication support (#524485)
	Make smb-browse backend not automounted
	Mount smb root on network backend automount

2009-01-05  Ryan Lortie  <desrt@desrt.ca>

	* daemon/trashlib/COPYING: include text of GPL3 by request of Vincent.

2008-12-30  Benjamin Otte  <otte@gnome.org>

	Bug 565504 - limited number of connections causes commands to fail

	* daemon/gvfsbackendftp.c: (g_vfs_backend_ftp_pop_connection):
	really fix this bug by not calling g_vfs_job_succeeded() on the error
	path.

2008-12-30  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (g_vfs_backend_ftp_pop_connection):
	remove fixme for max connection tracking, by remembering the max
	connections on the stack.

2008-12-30  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_prepare),
	(ftp_connection_use), (ftp_connection_ensure_data_connection_epsv),
	(ftp_connection_ensure_data_connection_pasv),
	(ftp_connection_try_cd), (g_vfs_backend_ftp_pop_connection),
	(do_mount), (resolve_symlink), (do_enumerate):
	introduce ftp_connection_clear_error() for clarity

2008-12-30  Benjamin Otte  <otte@gnome.org>

	Bug 565504 - limited number of connections causes commands to fail
